# canopy-ide

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  RELEASING.md  SECURITY.md  SPEC.md  THIRD-PARTY-NOTICES.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
demo/: data.csv  notebook.ipynb  notes.md  page.html  sample.docx  sample.ts
docs/: agent-parity.md  collab-editing.md  release-notes-v0.2.2.md  release-notes-v0.2.3.md  release-notes-v0.2.4.md  release-notes-v0.2.5.md  release-notes-v0.2.6.md  release-notes-v0.2.7.md  release-notes-v0.2.8.md
portal/: index.html  tsconfig.json  vite.config.ts
portal/src/: App.tsx  main.tsx  styles.css  wire.ts  wsTransport.ts
scripts/: bump-version.sh  collab-fuzz.mjs  export-signing-secrets.sh  prepare-sidecar.mjs  release-macos.sh
shared/: AgentTerminal.tsx  agentGlyphs.tsx  agents.css  components.tsx  icons.tsx  model.ts  transport.ts
src/: App.tsx  agentMenu.tsx  background.ts  coachmarks.ts  collab-ot.test.ts  collab-ot.ts  collab.ts  crash.ts  fonts.ts  index.css  ipc.ts  main.tsx  markdown.test.ts  markdown.ts  monaco-setup.ts  notifications.ts  onboarding.ts  pricing.test.ts  pricing.ts  projects.test.ts  projects.ts  prs.ts  restorable.ts  settings.test.ts  settings.ts  terminalMemory.ts  terminalThemes.ts  themes.ts  trackers.ts  types.ts  updater.ts  useEscape.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  tauri.conf.macos-x64.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/onnxruntime/: .gitkeep
src-tauri/src/: agents.rs  cli.rs  crash.rs  dictation.rs  dictation_stub.rs  fsx.rs  git.rs  index.css  lib.rs  lsp.rs  portal.rs  pty.rs  punch.rs  qstream.rs  relay.rs  tunnel.rs  winproc.rs  wsbridge.rs
src/components/: AboutDialog.tsx  AgentLaunchButton.tsx  AgentWorkspaceView.tsx  AgentsPanel.tsx  AppearancePanel.tsx  BranchView.tsx  ChangesPanel.tsx  ChatView.tsx  Coachmark.tsx  CollabView.tsx  CommitView.tsx  ContextMenu.test.tsx  ContextMenu.tsx  Dictation.tsx  DiffView.tsx  ErrorBoundary.tsx  FileTree.tsx  FileView.tsx  GitPanel.tsx  HelpDialog.tsx  LooseEnds.tsx  MonacoEditor.tsx  Onboarding.tsx  Palette.tsx  PrView.tsx  ProjectDialog.tsx  ProjectManager.tsx  ProjectView.tsx  ReviewView.tsx  SettingsDialog.tsx  SharedProjectView.tsx  StatsPanel.tsx  StatusBar.tsx  TeamPanel.tsx  Term.tsx  TicketView.tsx  TicketsPanel.tsx  Welcome.tsx  fileIcons.ts  icons.tsx  (+1 more)
src/lsp/: client.ts  fsProvider.ts
src/test/: ipc-harness.test.ts  setup.ts
