[package]
name = "canopy"
version = "0.2.1"
description = "Local-first, memory-light, vibe-coding-first IDE"
authors = ["Cause Connect Pte Ltd <sam@fluidwords.app>"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
# The crate ships two binaries (the app + the hook helper), so `cargo run` —
# which `tauri dev` uses — must be told which one is the app.
default-run = "canopy"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Standalone helper the agent-CLI hooks invoke. Kept out of the app binary so a
# hook costs a ~1ms process start, not a whole Tauri runtime.
[[bin]]
name = "canopy-hook"
path = "src/bin/canopy_hook.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rcgen = { version = "0.13", default-features = false, features = ["ring"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
# PTY: cross-platform pseudo-terminal, the core of the terminal feature
portable-pty = "0.9"
# File watching for external-change detection (diff-first workflow)
notify = "8"
# Process-tree inspection for the runaway guard + agent detection
sysinfo = "0.33"
trash = "5.2.3"
# Relay encryption: SPAKE2 turns the low-entropy join code into a strong,
# mutually-authenticated session key (magic-wormhole's approach); HKDF splits
# it per-direction; ChaCha20-Poly1305 is the AEAD on the wire; SHA-256 both
# derives keys and integrity-checks transferred files. All pure-Rust RustCrypto
# — the relay transport itself stays std::net, no async/TLS stack pulled in.
sha2 = "0.10"
spake2 = "0.4"
hkdf = "0.12"
chacha20poly1305 = "0.10"
# OS CSPRNG for per-transfer key-derivation salts (nonce separation across
# file-transfer retries). Already present transitively via spake2/rand_core.
getrandom = "0.2"
# Long-term identity keys for trust-on-first-use: each Canopy signs its relay
# session with an Ed25519 key so a reused join code can't silently impersonate
# a teammate across sessions.
ed25519-dalek = "2"
hex = "0.4"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
# Native notifications for team-relay activity while the app is unfocused
tauri-plugin-notification = "2"
igd = { version = "0.12.1", default-features = false }

# Unix signals for killing whole PTY process groups (no zombies)
[target.'cfg(unix)'.dependencies]
libc = "0.2"
